// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10000n,
      "sign": true,
    },
    "amount1": {
      "mag": 10031n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 79,
      "range_check_builtin": 1880,
    },
    "n_steps": 25811,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941876495514824478789461470n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10031n,
      "sign": false,
    },
    "amount1": {
      "mag": 10000n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 81,
      "pedersen_builtin": 85,
      "range_check_builtin": 1918,
    },
    "n_steps": 27890,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935050431234390418979673808n,
  "tick_after": {
    "mag": 1n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 498500000000000000n,
      "sign": true,
    },
    "amount1": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 91,
      "range_check_builtin": 1868,
    },
    "n_steps": 27125,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 996999999999999991n,
      "sign": true,
    },
    "amount1": {
      "mag": 18411346761312300631549769633270080325n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 299,
      "pedersen_builtin": 457,
      "range_check_builtin": 11137,
    },
    "n_steps": 118914,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
    "amount1": {
      "mag": 498500000000000000n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 91,
      "range_check_builtin": 2689,
    },
    "n_steps": 32719,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 18411346761312300631549769633270080325n,
      "sign": false,
    },
    "amount1": {
      "mag": 996999999999999988n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 327,
      "pedersen_builtin": 463,
      "range_check_builtin": 12003,
    },
    "n_steps": 131515,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10468,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10456,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10000n,
      "sign": false,
    },
    "amount1": {
      "mag": 9969n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 81,
      "pedersen_builtin": 85,
      "range_check_builtin": 1854,
    },
    "n_steps": 27469,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935070848176405709111855138n,
  "tick_after": {
    "mag": 1n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 9969n,
      "sign": true,
    },
    "amount1": {
      "mag": 10000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 79,
      "range_check_builtin": 1830,
    },
    "n_steps": 25518,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941856078572809188248941300n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
    "amount1": {
      "mag": 499248873309964947n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 91,
      "range_check_builtin": 2119,
    },
    "n_steps": 29040,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": {
    "mag": 1383293n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
    "amount1": {
      "mag": 499248873309964947n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 109,
      "range_check_builtin": 2341,
    },
    "n_steps": 32170,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": {
    "mag": 1383293n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 499248873309964947n,
      "sign": true,
    },
    "amount1": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 91,
      "range_check_builtin": 2005,
    },
    "n_steps": 28111,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": {
    "mag": 1383292n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 499248873309964947n,
      "sign": true,
    },
    "amount1": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 109,
      "range_check_builtin": 2429,
    },
    "n_steps": 31924,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": {
    "mag": 1383292n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10000n,
      "sign": true,
    },
    "amount1": {
      "mag": 10031n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 79,
      "range_check_builtin": 1892,
    },
    "n_steps": 25935,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941876495514824478789461470n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1649,
      "pedersen_builtin": 426,
      "range_check_builtin": 27101,
    },
    "n_steps": 223306,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 498500000000000000n,
      "sign": true,
    },
    "amount1": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 91,
      "range_check_builtin": 1880,
    },
    "n_steps": 27249,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 996999999999999991n,
      "sign": true,
    },
    "amount1": {
      "mag": 18411346761312300631549769633270080325n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 300,
      "pedersen_builtin": 457,
      "range_check_builtin": 11149,
    },
    "n_steps": 119038,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 83,
      "pedersen_builtin": 84,
      "range_check_builtin": 2503,
    },
    "n_steps": 29188,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 299,
      "pedersen_builtin": 426,
      "range_check_builtin": 8411,
    },
    "n_steps": 99730,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10468,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10456,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1649,
      "pedersen_builtin": 426,
      "range_check_builtin": 27041,
    },
    "n_steps": 222772,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 9969n,
      "sign": true,
    },
    "amount1": {
      "mag": 10000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 79,
      "range_check_builtin": 1842,
    },
    "n_steps": 25642,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941856078572809188248941300n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 83,
      "pedersen_builtin": 84,
      "range_check_builtin": 2502,
    },
    "n_steps": 29185,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 299,
      "pedersen_builtin": 426,
      "range_check_builtin": 8401,
    },
    "n_steps": 99646,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 499248873309964947n,
      "sign": true,
    },
    "amount1": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 91,
      "range_check_builtin": 2017,
    },
    "n_steps": 28235,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": {
    "mag": 1383292n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 499248873309964947n,
      "sign": true,
    },
    "amount1": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 109,
      "range_check_builtin": 2441,
    },
    "n_steps": 32048,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": {
    "mag": 1383292n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1621,
      "pedersen_builtin": 402,
      "range_check_builtin": 27645,
    },
    "n_steps": 218987,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10031n,
      "sign": false,
    },
    "amount1": {
      "mag": 10000n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 83,
      "pedersen_builtin": 103,
      "range_check_builtin": 1981,
    },
    "n_steps": 29188,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935050431234390418979673808n,
  "tick_after": {
    "mag": 1n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 60,
      "range_check_builtin": 1460,
    },
    "n_steps": 20244,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 271,
      "pedersen_builtin": 402,
      "range_check_builtin": 7975,
    },
    "n_steps": 89594,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
    "amount1": {
      "mag": 498500000000000000n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 83,
      "pedersen_builtin": 115,
      "range_check_builtin": 2911,
    },
    "n_steps": 36098,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 18411346761312300631549769633270080324n,
      "sign": false,
    },
    "amount1": {
      "mag": 996999999999999987n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 329,
      "pedersen_builtin": 481,
      "range_check_builtin": 11470,
    },
    "n_steps": 129117,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10468,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10456,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10000n,
      "sign": false,
    },
    "amount1": {
      "mag": 9969n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 83,
      "pedersen_builtin": 103,
      "range_check_builtin": 1917,
    },
    "n_steps": 28767,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935070848176405709111855138n,
  "tick_after": {
    "mag": 1n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1621,
      "pedersen_builtin": 402,
      "range_check_builtin": 27586,
    },
    "n_steps": 218454,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
    "amount1": {
      "mag": 499248873309964947n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 56,
      "pedersen_builtin": 115,
      "range_check_builtin": 2340,
    },
    "n_steps": 32410,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": {
    "mag": 1383293n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
    "amount1": {
      "mag": 499248873309964947n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 56,
      "pedersen_builtin": 133,
      "range_check_builtin": 2532,
    },
    "n_steps": 35393,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": {
    "mag": 1383293n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 60,
      "range_check_builtin": 1460,
    },
    "n_steps": 20242,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 271,
      "pedersen_builtin": 402,
      "range_check_builtin": 7966,
    },
    "n_steps": 89511,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 3240,
      "pedersen_builtin": 762,
      "range_check_builtin": 53777,
    },
    "n_steps": 430637,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 594,
      "pedersen_builtin": 420,
      "range_check_builtin": 14079,
    },
    "n_steps": 135841,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 540,
      "pedersen_builtin": 762,
      "range_check_builtin": 15747,
    },
    "n_steps": 178935,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 303,
    },
    "n_steps": 10467,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 3240,
      "pedersen_builtin": 762,
      "range_check_builtin": 53658,
    },
    "n_steps": 429572,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 594,
      "pedersen_builtin": 420,
      "range_check_builtin": 14059,
    },
    "n_steps": 135667,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 540,
      "pedersen_builtin": 762,
      "range_check_builtin": 15728,
    },
    "n_steps": 178770,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 3240,
      "pedersen_builtin": 762,
      "range_check_builtin": 54094,
    },
    "n_steps": 424865,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 307,
    },
    "n_steps": 10562,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722883n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 567,
      "pedersen_builtin": 420,
      "range_check_builtin": 12619,
    },
    "n_steps": 125677,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 540,
      "pedersen_builtin": 762,
      "range_check_builtin": 15484,
    },
    "n_steps": 170776,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 307,
    },
    "n_steps": 10562,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722883n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 307,
    },
    "n_steps": 10549,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722883n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 306,
    },
    "n_steps": 10533,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722883n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1647,
      "pedersen_builtin": 408,
      "range_check_builtin": 27872,
    },
    "n_steps": 224475,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1647,
      "pedersen_builtin": 408,
      "range_check_builtin": 27872,
    },
    "n_steps": 224475,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 308,
    },
    "n_steps": 10577,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722883n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 3240,
      "pedersen_builtin": 762,
      "range_check_builtin": 53975,
    },
    "n_steps": 423792,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 308,
    },
    "n_steps": 10577,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722883n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 567,
      "pedersen_builtin": 420,
      "range_check_builtin": 12599,
    },
    "n_steps": 125495,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 540,
      "pedersen_builtin": 762,
      "range_check_builtin": 15465,
    },
    "n_steps": 170603,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1620,
      "pedersen_builtin": 402,
      "range_check_builtin": 27633,
    },
    "n_steps": 218863,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1647,
      "pedersen_builtin": 408,
      "range_check_builtin": 27038,
    },
    "n_steps": 222001,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 60,
      "range_check_builtin": 1448,
    },
    "n_steps": 20120,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 270,
      "pedersen_builtin": 402,
      "range_check_builtin": 7963,
    },
    "n_steps": 89470,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 60,
      "range_check_builtin": 2281,
    },
    "n_steps": 25802,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 297,
      "pedersen_builtin": 408,
      "range_check_builtin": 8772,
    },
    "n_steps": 100521,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10468,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10456,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1647,
      "pedersen_builtin": 408,
      "range_check_builtin": 26978,
    },
    "n_steps": 221467,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1620,
      "pedersen_builtin": 402,
      "range_check_builtin": 27574,
    },
    "n_steps": 218330,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 60,
      "range_check_builtin": 2281,
    },
    "n_steps": 25808,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 297,
      "pedersen_builtin": 408,
      "range_check_builtin": 8762,
    },
    "n_steps": 100437,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 60,
      "range_check_builtin": 1448,
    },
    "n_steps": 20118,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 270,
      "pedersen_builtin": 402,
      "range_check_builtin": 7954,
    },
    "n_steps": 89387,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10000n,
      "sign": true,
    },
    "amount1": {
      "mag": 10517n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 56,
      "pedersen_builtin": 103,
      "range_check_builtin": 2716,
    },
    "n_steps": 33479,
  },
  "liquidity_after": 150019n,
  "sqrt_ratio_after": 358626480022582750641202830198326118313n,
  "tick_after": {
    "mag": 105011n,
    "sign": false,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10649n,
      "sign": false,
    },
    "amount1": {
      "mag": 10000n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 114,
      "pedersen_builtin": 127,
      "range_check_builtin": 2992,
    },
    "n_steps": 38107,
  },
  "liquidity_after": 100009n,
  "sqrt_ratio_after": 318092040655615236860302625335891824051n,
  "tick_after": {
    "mag": 134871n,
    "sign": true,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 15185n,
      "sign": true,
    },
    "amount1": {
      "mag": 16513n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 84,
      "pedersen_builtin": 139,
      "range_check_builtin": 2910,
    },
    "n_steps": 37270,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 15185n,
      "sign": true,
    },
    "amount1": {
      "mag": 16513n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 327,
      "pedersen_builtin": 481,
      "range_check_builtin": 9425,
    },
    "n_steps": 106625,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 13061n,
      "sign": false,
    },
    "amount1": {
      "mag": 12055n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 142,
      "pedersen_builtin": 163,
      "range_check_builtin": 3883,
    },
    "n_steps": 46246,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 13061n,
      "sign": false,
    },
    "amount1": {
      "mag": 12055n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 358,
      "pedersen_builtin": 505,
      "range_check_builtin": 9791,
    },
    "n_steps": 116788,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10468,
  },
  "liquidity_after": 230021n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10456,
  },
  "liquidity_after": 230021n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10000n,
      "sign": false,
    },
    "amount1": {
      "mag": 9433n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 114,
      "pedersen_builtin": 127,
      "range_check_builtin": 2880,
    },
    "n_steps": 37247,
  },
  "liquidity_after": 100009n,
  "sqrt_ratio_after": 320125855863226297598523424027276983985n,
  "tick_after": {
    "mag": 122124n,
    "sign": true,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 9537n,
      "sign": true,
    },
    "amount1": {
      "mag": 10000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 56,
      "pedersen_builtin": 103,
      "range_check_builtin": 2578,
    },
    "n_steps": 32777,
  },
  "liquidity_after": 150019n,
  "sqrt_ratio_after": 357386975632795108754492777510811258014n,
  "tick_after": {
    "mag": 98086n,
    "sign": false,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 13101n,
      "sign": false,
    },
    "amount1": {
      "mag": 12092n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 142,
      "pedersen_builtin": 163,
      "range_check_builtin": 3918,
    },
    "n_steps": 46598,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 13101n,
      "sign": false,
    },
    "amount1": {
      "mag": 12092n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 358,
      "pedersen_builtin": 505,
      "range_check_builtin": 9817,
    },
    "n_steps": 117059,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 15232n,
      "sign": true,
    },
    "amount1": {
      "mag": 16563n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 84,
      "pedersen_builtin": 139,
      "range_check_builtin": 2880,
    },
    "n_steps": 37156,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 15232n,
      "sign": true,
    },
    "amount1": {
      "mag": 16563n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 327,
      "pedersen_builtin": 481,
      "range_check_builtin": 9386,
    },
    "n_steps": 106430,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;
